# AndroidLLM

./: .gitignore  README.md  features_2026-01-07.md  features_2026-07-02.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/androidllm/: BrowserInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-android.cpp
app/src/main/java/android/llama/cpp/: LLamaAndroid.kt
app/src/main/java/com/example/androidllm/: Agent.kt  AudioRecorder.kt  BriefingWorker.kt  Browser.kt  CaptureTileService.kt  ChatEngine.kt  DocIndex.kt  Downloader.kt  MainActivity.kt  MainViewModel.kt  Markdown.kt  MemoryStore.kt  ModelStorage.kt  Ocr.kt  PhoneTools.kt  Rag.kt  ReminderReceiver.kt  ScheduleAlarms.kt  ScheduleReceiver.kt  ScheduleTime.kt  Settings.kt  Share.kt  ToolLabels.kt  WebTools.kt
app/src/main/java/com/example/androidllm/data/: ChatDao.kt  ChatDatabase.kt  DocDao.kt  Entities.kt  MemoryDao.kt  ScheduleDao.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/androidllm/: PhoneToolsTest.kt  RagTest.kt  ScheduleTimeTest.kt  ShareRoutingTest.kt  UiFormatTest.kt  WebToolsTest.kt  WorkspaceResolveTest.kt
ideas/: androidllm-design-improvements.md  androidllm-killer-features-spec.md
whisper/: build.gradle.kts
whisper/src/androidTest/: AndroidManifest.xml
whisper/src/androidTest/java/com/example/whisper/: WhisperAsrInstrumentedTest.kt
whisper/src/main/cpp/: CMakeLists.txt  whisper-jni.c
whisper/src/main/java/com/example/whisper/: WhisperAsr.kt  WhisperLib.kt
